Project budget_bot_bank_budget_model {
  database_type: "PostgreSQL"
  Note: "Global multi-currency bank, budget categories in user base currency, FX lots, and valuation snapshots."
}

Table currencies {
  code char(3) [pk, not null]
  name text [not null]
  scale smallint [not null, default: 2]
}

Table users {
  id bigint [pk, not null]
  base_currency_code char(3) [not null, ref: > currencies.code]
  username text
  created_at timestamptz [not null, default: `now()`]
}

Table categories {
  id bigint [pk, not null, increment]
  user_id bigint [not null, ref: > users.id]
  name text [not null]
  kind text [not null, note: "regular | group | income | system"]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, name) [unique, name: "uq_categories_user_name"]
  }
}

Table group_members {
  group_id bigint [not null, ref: > categories.id]
  child_category_id bigint [not null, ref: > categories.id]
  share numeric(7,6) [not null, note: "0 < share <= 1"]

  indexes {
    (group_id, child_category_id) [pk]
  }
}

Table bank_accounts {
  id bigint [pk, not null, increment]
  user_id bigint [not null, ref: > users.id]
  name text [not null]
  is_primary boolean [not null, default: true]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table operations {
  id bigint [pk, not null, increment]
  user_id bigint [not null, ref: > users.id]
  type text [not null, note: "income | allocate | group_allocate | exchange | expense | transfer | reversal"]
  reversal_of_operation_id bigint [ref: > operations.id]
  comment text
  created_at timestamptz [not null, default: `now()`]
}

Table bank_entries {
  id bigint [pk, not null, increment]
  operation_id bigint [not null, ref: > operations.id]
  bank_account_id bigint [not null, ref: > bank_accounts.id]
  currency_code char(3) [not null, ref: > currencies.code]
  amount numeric(20,8) [not null, note: "Signed delta of real money in bank"]
}

Table budget_entries {
  id bigint [pk, not null, increment]
  operation_id bigint [not null, ref: > operations.id]
  category_id bigint [not null, ref: > categories.id]
  currency_code char(3) [not null, ref: > currencies.code, note: "Must equal user's base currency"]
  amount numeric(20,2) [not null, note: "Signed delta of category budget in base currency"]
}

Table fx_lots {
  id bigint [pk, not null, increment]
  bank_account_id bigint [not null, ref: > bank_accounts.id]
  currency_code char(3) [not null, ref: > currencies.code]
  amount_initial numeric(20,8) [not null]
  amount_remaining numeric(20,8) [not null]
  buy_rate_in_base numeric(20,8) [not null, note: "1 unit of lot currency in user base currency"]
  cost_base_initial numeric(20,2) [not null]
  cost_base_remaining numeric(20,2) [not null]
  opened_by_operation_id bigint [not null, ref: > operations.id]
  created_at timestamptz [not null, default: `now()`]
}

Table lot_consumptions {
  id bigint [pk, not null, increment]
  operation_id bigint [not null, ref: > operations.id]
  lot_id bigint [not null, ref: > fx_lots.id]
  amount numeric(20,8) [not null]
  cost_base numeric(20,2) [not null]
}

Table fx_rate_snapshots {
  id bigint [pk, not null, increment]
  base_currency_code char(3) [not null, ref: > currencies.code]
  quote_currency_code char(3) [not null, ref: > currencies.code]
  rate numeric(20,8) [not null]
  fetched_at timestamptz [not null]
  source text

  indexes {
    (base_currency_code, quote_currency_code, fetched_at) [unique, name: "uq_fx_rate_snapshots_pair_time"]
  }
}
